Migrate common/util to JUnit5
Migrated all tests to use JUnit5 Assertions, using
openrewrite:rewrite-testing-frameworks. The tests are also modernized to
use new assertions, local variable type inference and Java 17
collections.

// FIXME: audit more conversions

JIRA: YANGTOOLS-1521
Change-Id: I175e6fb628a1f1375e70ff8c93f1b1028ccf4ce6
Signed-off-by: matus.matok <matus.matok@pantheon.tech>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>