@@ -7,46 +7,46 @@
  */
 package org.opendaylight.yangtools.util;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertIterableEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Iterables;
 import java.util.Collection;
-import java.util.Collections;
-import org.junit.Test;
+import java.util.List;
+import java.util.Set;
+import org.junit.jupiter.api.Test;
 
-public class ConstantArrayCollectionTest {
+class ConstantArrayCollectionTest {
     private static final String[] ARRAY = new String[] { "a", "bb", "ccc" };
-    private static final Collection<String> REF = ImmutableList.copyOf(ARRAY);
+    private static final List<String> REF = List.of(ARRAY);
 
-    private static Collection<String> create() {
+    private static Collection<?> create() {
         return new ConstantArrayCollection<>(ARRAY.clone());
     }
 
     @Test
-    public void testToString() {
+    void testToString() {
         // Empty
-        assertEquals(Collections.emptySet().toString(), new ConstantArrayCollection<>(new Object[0]).toString());
+        assertEquals(Set.of().toString(), new ConstantArrayCollection<>(new Object[0]).toString());
 
         // Normal
         assertEquals(REF.toString(), create().toString());
     }
 
     @Test
-    public void testEquals() {
-        final Collection<?> c = create();
+    void testEquals() {
+        final var c = create();
 
         assertTrue(c.containsAll(REF));
         assertTrue(REF.containsAll(c));
-        assertTrue(Iterables.elementsEqual(REF, c));
+        assertIterableEquals(REF, c);
     }
 
     @Test
-    public void testSimpleOperations() {
-        final Collection<?> c = create();
+    void testSimpleOperations() {
+        final var c = create();
 
         assertEquals(ARRAY.length, c.size());
         assertFalse(c.isEmpty());
@@ -54,14 +54,14 @@ public class ConstantArrayCollectionTest {
         assertFalse(c.contains(""));
         assertFalse(c.contains(1));
 
-        assertTrue(c.containsAll(Collections.emptyList()));
-        assertFalse(c.containsAll(Collections.singleton("")));
-        assertFalse(c.containsAll(Collections.singleton(1)));
+        assertTrue(c.containsAll(List.of()));
+        assertFalse(c.containsAll(Set.of("")));
+        assertFalse(c.containsAll(Set.of(1)));
     }
 
     @Test
-    public void testProtection() {
-        final Collection<?> c = create();
+    void testProtection() {
+        final var c = create();
 
         assertThrows(UnsupportedOperationException.class, () -> c.add(null));
         assertThrows(UnsupportedOperationException.class, () -> c.remove(null));
